2 services separated, added simple kafka producer-consumer; progressing! going straight to MVP

--- a/medium-service/pom.xml
+++ b/medium-service/pom.xml
@@ -9,12 +9,12 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.kulikov</groupId>
-	<artifactId>demo</artifactId>
+	<artifactId>medium</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>testInit</name>
+	<name>medium-service</name>
 	<description>Demo project for Spring Boot</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>10</java.version>
 	</properties>
 	<dependencies>
 		<!--<dependency>
@@ -28,6 +28,10 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-autoconfigure</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.kafka</groupId>
