--- a/handling/pom.xml
+++ b/handling/pom.xml
@@ -14,7 +14,7 @@
 	<name>handling-service</name>
 	<description>Microservice for handling/processing requests</description>
 	<properties>
-		<java.version>11</java.version>
+		<java.version>10</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -22,8 +22,17 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-autoconfigure</artifactId>
+		</dependency>
+		<dependency>
 			<groupId>org.springframework.kafka</groupId>
 			<artifactId>spring-kafka</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>javax.annotation</groupId>
+			<artifactId>javax.annotation-api</artifactId>
+			<version>1.3.2</version>
 		</dependency>
 
 		<dependency>
