add redis support, kafka support

--- a/medium-service/src/main/resources/application.yaml
+++ b/medium-service/src/main/resources/application.yaml
@@ -1,13 +1,21 @@
 spring:
   kafka:
+    bootstrap-servers: localhost:9092
+    producer:
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
     consumer:
-      bootstrap-servers: localhost:9092
       group-id: medium_service_id
       auto-offset-reset: earliest
       key-deserializer: org.apache.kafka.common.serialization.StringDeserializer
-      value-deserializer: org.apache.kafka.common.serialization.StringDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
   thymeleaf:
     cache: false
 
 error:
   message: First Name & Last Name is required!
+
+redis:
+  hostName: localhost
+  port: 6379
+
